[gd_scene load_steps=2 format=3 uid="uid://dc0hjh4cpbk38"]

[ext_resource type="Script" uid="uid://bk5ws54qujlmd" path="res://scripts/pause_menu.gd" id="1_jvnd5"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_jvnd5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.5882353)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.5
offset_top = -50.5
offset_right = 253.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="BtnResume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continuar"

[node name="BtnControls" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controles"

[node name="BtnQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sair"

[node name="ControlsPanel" type="Panel" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -956.0
offset_top = -538.0
offset_right = 956.0
offset_bottom = 538.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 591.0
offset_top = 287.0
offset_right = -588.0
offset_bottom = -293.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588)

[node name="BtnCloseControls" type="Button" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = 106.5
offset_right = 30.0
offset_bottom = 137.5
grow_horizontal = 2
grow_vertical = 2
text = "Fechar"

[node name="Label" type="Label" parent="ControlsPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.0
offset_top = -115.5
offset_right = 194.0
offset_bottom = 115.5
grow_horizontal = 2
grow_vertical = 2
text = "Analogico | WASD: Mover\"

X | Espaço: Pular

 □| Botão esq: Atacar

R1 | Shift: Dash

"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/BtnResume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnControls" to="." method="_on_btn_controls_pressed"]
[connection signal="pressed" from="VBoxContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
[connection signal="pressed" from="ControlsPanel/BtnCloseControls" to="." method="_on_btn_close_controls_pressed"]
